--- a/dart_spider/pubspec.yaml
+++ b/dart_spider/pubspec.yaml
@@ -4,10 +4,11 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.17.3 <3.0.0'
+  sdk: ">=2.17.3 <3.0.0"
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  http: ^0.13.4
+  html: ^0.15.0
 
 dev_dependencies:
   lints: ^2.0.0
